--- a/tags/templates/tags.md.template
+++ b/tags/templates/tags.md.template
@@ -4,11 +4,6 @@ title: Tags
 
 # Contents grouped by tag
 
-{% for tag, pages in tags %}
-
-## <span class="tag">{{tag}}</span>
-{%  for page in pages %}
-  * [{{page.title}}]({{page.filename}})
-{% endfor %}
- 
+{% for tag, filename in data %}
+  * [{{tag}}]({{filename}})
 {% endfor %}
